<resources>
    <string name="app_name">SteamMarketApp</string>
    <string name="loading_error_message_main">Steam Market items couldn\'t be loaded. Please check your internet connection.</string>

    <string name="action_settings">Settings</string>
    <string name="preview_description">Image and Video preview will appear here</string>
    <string name="Camera">Camera</string>
    <string name="btn_take_picture">Take Picture</string>
    <string name="btn_record_video">Record Video</string>
    <string name="buy_button_text">Buy</string>
    <string name="sell_button_text">Sell</string>
    <string name="button_update">Update</string>
    <string name="nav_settings">Settings</string>


    <!--lines to be added are below-->
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">Register</string>
    <string name="balance">Balance</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="welcome_user">Welcome User</string>

    <!--Strings for Type preference-->
    <string name="pref_type_key" translatable="false">pref_type</string>
    <string name="pref_type_title">Type</string>
    <string name="pref_type_entry_any">Any</string>
    <string name="pref_type_value_any">any</string>
    <string name="pref_type_entry_pistol">Pistol</string>
    <string name="pref_type_value_pistol">tag_CSGO_Type_Pistol</string>
    <string name="pref_type_entry_smg">SMG</string>
    <string name="pref_type_value_smg">tag_CSGO_Type_SMG</string>
    <string name="pref_type_entry_rifle">Rifle</string>
    <string name="pref_type_value_rifle">tag_CSGO_Type_Rifle</string>
    <string name="pref_type_entry_knife">Knife</string>
    <string name="pref_type_value_knife">tag_CSGO_Type_Knife</string>
    <string name="pref_type_entry_sniper_rifle">Sniper Rifle</string>
    <string name="pref_type_value_sniper_rifle">tag_CSGO_Type_SniperRifle</string>
    <string name="pref_type_entry_shotgun">Shotgun</string>
    <string name="pref_type_value_shotgun">tag_CSGO_Type_Shotgun</string>
    <string name="pref_type_entry_container">Container</string>
    <string name="pref_type_value_container">tag_CSGO_Type_WeaponCase</string>
    <string name="pref_type_entry_gloves">Gloves</string>
    <string name="pref_type_value_gloves">tag_Type_Hands</string>
    <string name="pref_type_entry_collectible">Collectible</string>
    <string name="pref_type_value_collectible">tag_CSGO_Type_Collectible</string>
    <string name="pref_type_default">@string/pref_type_value_any</string>

    <!--Strings for rarity preference-->
    <string name="pref_rarity_key" translatable="false">pref_rarity</string>
    <string name="pref_rarity_title">Rarity</string>
    <string name="pref_rarity_entry_any">Any</string>
    <string name="pref_rarity_value_any">any</string>
    <string name="pref_rarity_entry_base_grade">Base Grade</string>
    <string name="pref_rarity_value_base_grade">tag_Rarity_Common</string>
    <string name="pref_rarity_entry_high_grade">High Grade</string>
    <string name="pref_rarity_value_high_grade">tag_Rarity_Rare</string>
    <string name="pref_rarity_entry_extraordinary">Extraordinary</string>
    <string name="pref_rarity_value_extraordinary">tag_Rarity_Ancient</string>
    <string name="pref_rarity_entry_exotic">Exotic</string>
    <string name="pref_rarity_value_exotic">tag_Rarity_Legendary</string>
    <string name="pref_rarity_entry_contraband">Contraband</string>
    <string name="pref_rarity_value_contraband">tag_Rarity_Contraband</string>
    <string name="pref_rarity_default">@string/pref_rarity_value_any</string>

    <!--Strings for balance preference-->
    <string name="pref_balance_key">pref_balance</string>
    <string name="pref_balance_title">Balance</string>
    <string name="pref_balance_default">1000</string>

    <string name="my_items">My items</string>
</resources>
